--- a/.env
+++ b/.env
@@ -34,10 +34,10 @@
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = localhost
+database.default.hostname = 10.130.26.105
 database.default.database = sipro2024
-database.default.username = root
-database.default.password = root
+database.default.username = admin_kp
+database.default.password = Bangwil124
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
