--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@
 #--------------------------------------------------------------------
 
 database.default.hostname = 10.130.26.105
-database.default.database = sipro2024
+database.default.database = sipro_kp
 database.default.username = admin_kp
 database.default.password = Bangwil24
 database.default.DBDriver = MySQLi
